# mentor-lite-downloader

./: .gitignore  README.md  pyproject.toml  start.cmd  stop.cmd
config/: precheck_rules.yaml
scripts/: build-release.ps1  prepare-offline-deps.ps1  prepare-python-runtime.ps1  start.ps1  stop.ps1
src/mentor_lite/: api.py  authorize.py  bilibili.py  downloader.py  knowledge.py  models.py  precheck.py  settings.py  storage.py
static/: app.js  index.html  styles.css
